AppActions.NEW_CAMPAIGN sets initial zone using Campaign#getZones() and MapToolClient#setCurrentZone(Zone)